# g-chainlit-project

./: .gitignore  AGENTS.md  CLAUDE.md  app_logging.py  data_layer.py  main.py  projects.py  pyproject.toml  schema.sql  start.sh  stop.sh
.chainlit/: config.toml
docs/superpowers/plans/: 2026-07-14-project-mode.md
public/: custom.css
public/elements/: ProjectDashboard.jsx  ReloadPrompt.jsx  WelcomeCard.jsx
ref_ai/: chainlit_task.md
tests/: conftest.py  test_app_logging.py  test_data_layer.py  test_projects.py
